--- a/.gitignore
+++ b/.gitignore
@@ -23,9 +23,10 @@ utils.pyc
 waf
 waf-tools/
 waf.bat
-wscript
 wutils.py
 wutils.pyc
+.waf*
+*.config
 
 plot/randomCoverIncremental/dred
 plot/randomCoverIncremental/raid
